--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Book Dorothe Blake</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header class="booking-hero">
+    <div class="hero-overlay">
+      <h1>Book Your Event</h1>
+      <p>Fill out the form below to check availability.</p>
+    </div>
+  </header>
 
+  <section class="booking-form">
+    <!-- Calendly Embed -->
+    <div class="calendly-inline-widget" data-url="https://calendly.com/your-link" style="min-width:320px;height:700px;"></div>
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+    
+    <div class="contact-cta">
+      <p>Prefer to discuss details first?</p>
+      <a href="index.html#contact" class="btn-gold">Contact Me</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2024 Dorothe Blake. All rights reserved.</p>
+  </footer>
+</body>
+</html>
