--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Hero Section -->
   <header class="hero">
-    <img src="assets/hero-image.jpg" alt="Dorothe Blake performing on violin" class="hero-image">
+    <img src="assets/IMG_9252.jpeg" alt="Dorothe Blake performing on violin" class="hero-image">
     <div class="hero-overlay">
       <h1>Dorothe Blake</h1>
       <p>Professional Violinist for Weddings, Events & Worship</p>
