--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <div class="nav-links">
       <a href="#about">About</a>
       <a href="#history">Journey</a>
-      <a href="#gallery">Performances</a>
+      <a href="#gallery">Gallery</a>
       <a href="#contact">Contact</a>
       <a href="booking.html" class="btn-gold">Book Now</a>
     </div>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- Hero Section (Using IMG_0101.jpeg) -->
   <header class="hero">
-    <img src="assets/IMG_9252.jpeg" alt="Dorothe Blake performing on violin" class="hero-image">
+    <img src="assets/IMG_0101.jpeg" alt="Dorothe Blake performing" class="hero-image">
     <div class="hero-overlay">
       <h1>Dorothe Blake</h1>
-      <p>Professional Violinist for Weddings, Events & Worship</p>
-      <a href="booking.html" class="btn-gold">Book Your Event</a>
+      <p>Professional Violinist for Weddings & Special Events</p>
+      <a href="#contact" class="btn-gold">Contact Me</a>
     </div>
   </header>
 
@@ -36,8 +36,8 @@
   <section id="about" class="bio">
     <h2>About Me</h2>
     <p>Classically trained violinist with over 40 years of performance experience across Europe and North America. 
-       I specialize in weddings, corporate events, and worship services, blending technical precision with spiritual 
-       sensitivity to create unforgettable musical moments.</p>
+       I specialize in weddings, corporate events, and worship services, blending technical precision with emotional 
+       depth to create unforgettable musical moments.</p>
   </section>
 
   <!-- History Section -->
@@ -52,21 +52,37 @@
         <h3>Professional Development</h3>
         <p>Performed with the Christian Radio and TV Orchestra (Evangelische Omroep) and studied at Continental Bible College in Brussels.</p>
       </div>
-      <!-- More timeline items -->
+      <div class="timeline-item">
+        <h3>International Performances</h3>
+        <p>Played with bands across Belgium and France, recording albums and ministering through music.</p>
+      </div>
+      <div class="timeline-item">
+        <h3>Current Work</h3>
+        <p>Member of Brent Symphony Orchestra, session violinist, and active worship musician at HTB London.</p>
+      </div>
     </div>
-    <p class="history-footer">"I read music but can improvise too, playing from the heart and flowing in the Spirit."</p>
   </section>
 
   <!-- Gallery Section -->
   <section id="gallery" class="gallery">
     <h2>Performance Gallery</h2>
     <div class="media-grid">
+      <!-- Your Uploaded Images -->
+      <img src="assets/IMG_0102.jpeg" alt="Dorothe performing at a concert">
+      <img src="assets/IMG_0103.jpeg" alt="Violin close-up performance">
+      <img src="assets/IMG_0104.jpeg" alt="Orchestra performance">
+      <img src="assets/IMG_0105.jpeg" alt="Stage performance">
+      <img src="assets/IMG_0106.jpeg" alt="Event performance">
+      <img src="assets/IMG_0107.jpeg" alt="Solo violin performance">
+      
+      <!-- Your Uploaded Video -->
+      <video controls>
+        <source src="assets/672a614ab91c4020ce00495cccf18a4a.mp4" type="video/mp4">
+      </video>
+      
       <!-- YouTube Embeds -->
       <iframe src="https://www.youtube.com/embed/s4g8ZGORYh4" frameborder="0" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/tOpT__06120" frameborder="0" allowfullscreen></iframe>
-      <!-- Local Images -->
-      <img src="assets/gallery-1.jpg" alt="Dorothe performing with orchestra">
-      <img src="assets/gallery-2.jpg" alt="Close-up of Dorothe playing violin">
     </div>
   </section>
 
