--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dorothe Blake | Professional Violinist</title>
-  <meta name="description" content="Classically trained violinist available for weddings, events, and worship services. Over 40 years of performance experience.">
+  <meta name="description" content="Classically trained violinist for weddings, funerals, and special events. Over 40 years of performance experience.">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -22,12 +22,12 @@
     </div>
   </nav>
 
-  <!-- Hero Section (Using IMG_0101.jpeg) -->
+  <!-- Hero Section -->
   <header class="hero">
     <img src="assets/IMG_0101.jpeg" alt="Dorothe Blake performing" class="hero-image">
-    <div class="hero-overlay">
+    <div class="hero-overlay-bottom">
       <h1>Dorothe Blake</h1>
-      <p>Professional Violinist for Weddings & Special Events</p>
+      <p>Professional Violinist for Weddings, Funerals & Special Events</p>
       <a href="#contact" class="btn-gold">Contact Me</a>
     </div>
   </header>
@@ -36,8 +36,8 @@
   <section id="about" class="bio">
     <h2>About Me</h2>
     <p>Classically trained violinist with over 40 years of performance experience across Europe and North America. 
-       I specialize in weddings, corporate events, and worship services, blending technical precision with emotional 
-       depth to create unforgettable musical moments.</p>
+       I specialize in weddings, funerals, corporate events, and worship services, blending technical precision with emotional 
+       depth to create meaningful musical moments for every occasion.</p>
   </section>
 
   <!-- History Section -->
@@ -49,12 +49,8 @@
         <p>Began playing at age 7 in Rotterdam. Joined church worship teams and the Rotterdam Youth Symphony Orchestra by age 12.</p>
       </div>
       <div class="timeline-item">
-        <h3>Professional Development</h3>
-        <p>Performed with the Christian Radio and TV Orchestra (Evangelische Omroep) and studied at Continental Bible College in Brussels.</p>
-      </div>
-      <div class="timeline-item">
         <h3>International Performances</h3>
-        <p>Played with bands across Belgium and France, recording albums and ministering through music.</p>
+        <p>Played with bands across Belgium and France, recording albums and ministering through music. Performed with the Christian Radio and TV Orchestra (Evangelische Omroep).</p>
       </div>
       <div class="timeline-item">
         <h3>Current Work</h3>
@@ -67,7 +63,7 @@
   <section id="gallery" class="gallery">
     <h2>Performance Gallery</h2>
     <div class="media-grid">
-      <!-- Your Uploaded Images -->
+      <!-- Images -->
       <img src="assets/IMG_0102.jpeg" alt="Dorothe performing at a concert">
       <img src="assets/IMG_0103.jpeg" alt="Violin close-up performance">
       <img src="assets/IMG_0104.jpeg" alt="Orchestra performance">
@@ -75,12 +71,15 @@
       <img src="assets/IMG_0106.jpeg" alt="Event performance">
       <img src="assets/IMG_0107.jpeg" alt="Solo violin performance">
       
-      <!-- Your Uploaded Video -->
+      <!-- Videos -->
+      <video controls>
+        <source src="assets/96760b3242fd2ad4386567e08833bafb.mp4" type="video/mp4">
+      </video>
       <video controls>
         <source src="assets/672a614ab91c4020ce00495cccf18a4a.mp4" type="video/mp4">
       </video>
       
-      <!-- YouTube Embeds -->
+      <!-- YouTube Videos -->
       <iframe src="https://www.youtube.com/embed/s4g8ZGORYh4" frameborder="0" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/tOpT__06120" frameborder="0" allowfullscreen></iframe>
     </div>
